text wrapping issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 .inline_block{
     display: inline-block;
     vertical-align: top;
+    white-space: nowrap;
 }
 
 .logo{
     width:23%;
     padding:1%;
-    text-align: center;
+    text-align:center;
 }
 
 nav{
@@ -22,7 +23,7 @@ ul{
 
 li{
     background-color: white;
-    padding: 10px 50px 20px;
+    padding: 20px 50px 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
